bug fix riguardo i test unitari generato dalle recenti modifiche del codice, bug fix riguardo il test case: test_TC_GPL_GL_02